[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/Sprites.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Flip_LR"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Flip_RL"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Left"
length = 0.01
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Right"
length = 0.01
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Roll_-90_0_360"
length = 0.95
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Roll_-90_360"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 14, 13, 12 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=11]
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Roll_90_0_360"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Roll_90_360"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 6, 7, 8, 9, 5, 4, 3, 2, 1 ]
}

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 24, 21 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 24, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 48, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 72, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 96, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 120, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 144, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 168, 21, 24, 21 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 0, 42, 24, 21 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 24, 42, 24, 21 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 48, 42, 24, 21 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 72, 42, 24, 21 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 96, 42, 24, 21 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 120, 42, 24, 21 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 144, 42, 24, 21 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=38]
radius = 7.50519

[sub_resource type="CircleShape2D" id=39]
radius = 8.76576

[sub_resource type="Shader" id=40]
code = "shader_type canvas_item;
uniform float transparency = 0.05;


void fragment() {
    COLOR = texture(TEXTURE, UV);
    float avg = (COLOR.r + COLOR.g + COLOR.b) / 20.0;
    COLOR.rgb = vec3(avg);
	COLOR.w = COLOR.w * transparency;
}

//shader_type canvas_item;
//uniform sampler2D img_texture: filter_nearest, repeat_enable;
//uniform vec4 img_color: source_color;
//void fragment(){
//	vec4 base_pixel = texture(TEXTURE, UV);
//	vec4 texture_pixel = texture(img_texture, UV);
//	
//	texture_pixel.rgb = vec3(img_color.rgb);
//	
//	COLOR.rgb = mix(base_pixel.rgb, texture_pixel.rgb, texture_pixel.a * img_color.a);
//}"

[sub_resource type="ShaderMaterial" id=41]
shader = SubResource( 40 )
shader_param/transparency = 0.1

[node name="Player" type="KinematicBody2D"]
position = Vector2( 65.6789, 0 )
collision_mask = 216
collision/safe_margin = 0.01
script = ExtResource( 1 )
oBullet = ExtResource( 3 )
bulletcooldown = 0.15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flip_LR = SubResource( 1 )
anims/Flip_RL = SubResource( 2 )
anims/Left = SubResource( 3 )
anims/Right = SubResource( 4 )
anims/Roll_-90_0_360 = SubResource( 5 )
anims/Roll_-90_360 = SubResource( 6 )
anims/Roll_0_-90 = SubResource( 7 )
anims/Roll_0_180 = SubResource( 8 )
anims/Roll_0_90 = SubResource( 9 )
anims/Roll_180_0 = SubResource( 10 )
anims/Roll_360 = SubResource( 11 )
anims/Roll_90_0_360 = SubResource( 12 )
anims/Roll_90_360 = SubResource( 13 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = -16.0
margin_top = -10.0
margin_right = 16.0
margin_bottom = 11.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 32, 21 )
transparent_bg = true
handle_input_locally = false
hdr = false
render_target_update_mode = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="ViewportContainer/Viewport"]
position = Vector2( 16, 11 )
frames = SubResource( 37 )
animation = "IDLE"
frame = 15
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.350773, 0.0350752 )
shape = SubResource( 38 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_mask = 248

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.420921, 0.420922 )
shape = SubResource( 39 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RollTimer" type="Timer" parent="."]

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 20, 0 )

[node name="Shadow" type="Sprite" parent="."]
material = SubResource( 41 )
position = Vector2( 20, 20 )
z_index = -1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="RollTimer" to="." method="_on_RollTimer_timeout"]
[connection signal="timeout" from="ShootDelay" to="." method="_on_ShootDelay_timeout"]
